fix contrast

--- a/gsoc/static/css/python-gsoc.css
+++ b/gsoc/static/css/python-gsoc.css
@@ -431,7 +431,7 @@ div.problem {
 
 #topnav .pure-menu-link.pure-menu-heading {
     margin-top: 6px;
-    color: #aaa;
+    color: #fff;
 }
 
 #topnav .pure-menu-link.pure-menu-heading:hover {
@@ -464,6 +464,7 @@ div.problem {
 
 .blog-list .card-container .card .title {
     margin: 0.5em 0;
+    color: #23505D;
 }
 
 .blog-list .card-container .card .suborg {
@@ -507,7 +508,7 @@ div.problem {
 
 .card .no-proposal {
     font-size: 12px;
-    color: red;
+    color: #990000;
 }
 
 .grecaptcha-badge {
